--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     var colors = ["blue", "green", "red", "purple", "orange", "pink"];
 
     function startGame() {
-        fillTwoDimensionalBoard(booleanBoard, false);
-        fillTwoDimensionalBoard(numberOfBombsAdjacentToField, 0);
-        fillTwoDimensionalBoard(flagsBoard, 0);
+        booleanBoard = fillTwoDimensionalBoard(false);
+        numberOfBombsAdjacentToField = fillTwoDimensionalBoard(0);
+        flagsBoard = fillTwoDimensionalBoard(0);
         createBorderTable();
         plantBombs();
     }
@@ -48,11 +48,12 @@
         }
     }
 
-
-    function fillTwoDimensionalBoard(array, value) {
+    function fillTwoDimensionalBoard(value) {
+        var array = new Array(9);
         for (var i = 0; i < 9; i++) {
             array[i] = new Array(9).fill(value);
         }
+        return array;
     }
 
     function plantBombs() {
