--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     var colors = ["blue", "green", "red", "purple", "orange", "pink"];
 
     function startGame() {
-        booleanBoard = fillTwoDimensionalBoard(false);
-        numberOfBombsAdjacentToField = fillTwoDimensionalBoard(0);
-        flagsBoard = fillTwoDimensionalBoard(0);
+        booleanBoard = fillTwoDimensionalArray(false);
+        numberOfBombsAdjacentToField = fillTwoDimensionalArray(0);
+        flagsBoard = fillTwoDimensionalArray(0);
         createBorderTable();
         plantBombs();
     }
@@ -48,7 +48,7 @@
         }
     }
 
-    function fillTwoDimensionalBoard(value) {
+    function fillTwoDimensionalArray(value) {
         var array = new Array(9);
         for (var i = 0; i < 9; i++) {
             array[i] = new Array(9).fill(value);
