--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     var colors = ["blue", "green", "red", "purple", "orange", "pink"];
 
     function startGame() {
-        booleanBoard = fillTwoDimensionalArray(false);
+        bombs = fillTwoDimensionalArray(false);
         numberOfBombsAdjacentToField = fillTwoDimensionalArray(0);
         flagsBoard = fillTwoDimensionalArray(0);
         createBorderTable();
@@ -50,7 +50,10 @@
     function fillTwoDimensionalArray(value) {
         var array = new Array(9);
         for (var i = 0; i < 9; i++) {
-            array[i] = new Array(9).fill(value);
+            array[i] = new Array(9);
+            for (var j = 0; j < 9; j++) {
+                array[i][j] = value;
+            }
         }
         return array;
     }
