--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
     }
 
     function incrementNumberOfBombsAdjacentToField(x, y) {
-        numberOfBombsAdjacentToField[parseInt(x)][parseInt(y)]++;
+        numberOfBombsAdjacentToField[x][y]++;
     }
 
     function leftTopCorner(x, y) {
