--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@
 <button class="new-game-button" onclick="location.reload()">Start new game</button>
 
 <script>
-    var bombs = new Array(9);//TODO z bombs i flagsBoard zrobic jednego arraya z polami isFlag i isBomb
-    var numberOfBombsAdjacentToField = new Array(9);
-    var flagsBoard = new Array(9);
+    //TODO z bombs i flagsBoard zrobic jednego arraya z polami isFlag i isBomb
     var numberOfBombs = 9;
     var isGameDone = false;
     var colors = ["blue", "green", "red", "purple", "orange", "pink"];
-    bombs = fillTwoDimensionalArray(false);
-    numberOfBombsAdjacentToField = fillTwoDimensionalArray(0);
-    flagsBoard = fillTwoDimensionalArray(0);
+    var bombs = fillTwoDimensionalArray(false);
+    var numberOfBombsAdjacentToField = fillTwoDimensionalArray(0);
+    var flagsBoard = fillTwoDimensionalArray(0);
     createBorderTable();
     plantBombs();
 
